--- a/scss/layout/_1_header.scss
+++ b/scss/layout/_1_header.scss
@@ -1,6 +1,6 @@
 header {
   width: 100%;
-  height: 415px;
+  height: 390px;
   border-bottom: 4px solid $light-brown;
   // background: $dark-brown;
   // background-image: url("../img/header-background.png") no-repeat;
@@ -27,9 +27,9 @@ header {
 .header__links {
   color: $white;
   height: 150px;
-  margin-top: 90px;
+  margin-top: 75px;
   list-style-type: none;
-  font-size: 2em;
+  font-size: 1.5em;
   font-weight: 300;
   & li {
     // margin-top: -220px;
@@ -39,12 +39,14 @@ header {
     margin-right: 20px;
     &:hover {
       cursor: pointer;
-      color: $gray2;
+      padding-bottom: 7px;
+      // color: $gray2;
+      border-bottom: 4px solid $white;
     }
   }
 }
 
-.header__flag__image {
+.header__flag-image {
   display: inline-block;
   position: relative;
   width: 100px;
