--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@
 @import "layout/_2_container.scss";
 @import "layout/_3_category.scss";
 @import "layout/_4_content.scss";
+@import "layout/_4_content-utisci.scss";
+@import "layout/_4_content-gallery.scss";
 @import "layout/_5_shoppingCart.scss";
 @import "layout/_6_footer.scss";
 
