dodat jelovnik i kategorije

--- a/scss/layout/_4_content-utisci.scss
+++ b/scss/layout/_4_content-utisci.scss
@@ -6,6 +6,9 @@
   // height: 900px;
   background-color: $white;
   @include shadowBorder;
+
+  display: none;
+
 }
 
 .content__utisci-container__title-main-container {
