--- a/scss/layout/_4_content-gallery.scss
+++ b/scss/layout/_4_content-gallery.scss
@@ -1,4 +1,4 @@
-.content_gallery-container {
+.content__gallery-container {
   overflow: hidden;
   margin-top: 50px;
   width: 100%;
@@ -6,14 +6,17 @@
   // height: 900px;
   background-color: $white;
   @include shadowBorder;
+
+  display: none;
+
 }
 
-.content_gallery-container__title-main-container {
+.content__gallery-container__title-main-container {
   width: 100%;
   background-color: $light-brown;
 }
 
-.content_gallery-container__title-main-container__title {
+.content__gallery-container__title-main-container__title {
   color: $white;
   font-size: 1.5em;
   margin-left: 10px;
@@ -27,7 +30,7 @@
   }
 }
 
-.content_gallery-container__gallery {
+.content__gallery-container__gallery {
   background-color: $gray2;
   padding: 15px;
   border-bottom: 2px solid $dark-brown;
@@ -37,7 +40,7 @@
   width: 100%;
 }
 
-.content_gallery-container__gallery__button {
+.content__gallery-container__gallery__button {
   font-size: 3em;
   // position: absolute;
   margin-top: -50px;
@@ -51,18 +54,21 @@
   &:active {
     color: $white;
   }
+  &:hover {
+    cursor: pointer;
+  }
 }
 
-.content_gallery-container__text-container {}
+.content__gallery-container__text-container {}
 
-.content_gallery-container__text-container__title {
+.content__gallery-container__text-container__title {
   font-size: 1.5em;
   color: $light-brown;
   margin-left: 10px;
   margin-top: 10px;
 }
 
-.content_gallery-container__text-container__text {
+.content__gallery-container__text-container__text {
   margin-left: 10px;
   padding-right: 30px;
   margin-top: 10px;
