--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "layout/_4_content.scss";
 @import "layout/_4_content-utisci.scss";
 @import "layout/_4_content-gallery.scss";
+@import "layout/_4_content-menu.scss";
 @import "layout/_5_shoppingCart.scss";
 @import "layout/_6_footer.scss";
 
