--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,7 +4,8 @@ body {
 	font-family: 'Roboto', sans-serif;
 	padding: 0;
 	margin: 0;
-	background: url("../img/background.jpg") no-repeat;
+	background: url("../img/background.jpg") repeat;
+	background-attachment: fixed;
 }
 
 // disable draging images
