--- a/scss/layout/_4_content-gallery.scss
+++ b/scss/layout/_4_content-gallery.scss
@@ -7,8 +7,7 @@
   background-color: $white;
   @include shadowBorder;
 
-  display: none;
-
+  // display: none;
 }
 
 .content__gallery-container__title-main-container {
