--- a/scss/layout/_4_content-utisci.scss
+++ b/scss/layout/_4_content-utisci.scss
@@ -7,8 +7,7 @@
   background-color: $white;
   @include shadowBorder;
 
-  display: none;
-
+  // display: none;
 }
 
 .content__utisci-container__title-main-container {
