dodat baner i mapa

--- a/scss/layout/_4_content-gallery.scss
+++ b/scss/layout/_4_content-gallery.scss
@@ -32,7 +32,7 @@
 .content__gallery-container__gallery {
   background-color: $gray2;
   padding: 15px;
-  border-bottom: 2px solid $dark-brown;
+  border-bottom: 2px solid $light-brown;
 }
 
 .slides {
