--- a/scss/layout/_4_content-menu.scss
+++ b/scss/layout/_4_content-menu.scss
@@ -67,16 +67,29 @@
   color: $gray3;
   font-weight: 400;
   font-size: 1em;
+  width: 70%;
 }
 
 .content__menu-container__item-container__price-button-container {
   float: right;
   margin-top: -25px;
   margin-right: 5px;
+  // disable highlighting button text
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome and Opera */
   &:hover {
     button, h3 {
       color: $dark-brown;
       cursor: pointer;
+    }
+  }
+  &:active {
+    button, h3 {
+      color: $light-brown;
     }
   }
 }
