--- a/scss/layout/_4_content.scss
+++ b/scss/layout/_4_content.scss
@@ -1,3 +1,8 @@
 .content {
   grid-area: content;
+  @media screen and (max-width: 800px) {
+    grid-area: mobile-menu;
+    // position: relative;
+    // margin-top: 5px;
+  }
 }
