--- a/scss/layout/_1_header.scss
+++ b/scss/layout/_1_header.scss
@@ -10,6 +10,9 @@ header {
   display: grid;
   align-items: center;
   text-align: center;
+  @media screen and (max-width: 800px) {
+    height: auto;
+  }
 }
 
 .header__logo {
@@ -18,6 +21,7 @@ header {
   width: 550px;
   height: auto;
   @media screen and (max-width: 800px) {
+    margin-top: 10px;
     width: 80%;
   }
 }
@@ -45,7 +49,23 @@ header {
       padding-bottom: 7px;
       // color: $gray2;
       border-bottom: 4px solid $white;
+      @media screen and (max-width: 800px) {
+        border-bottom: none;
+        padding-bottom: 10px;
+      }
     }
+    @media screen and (max-width: 800px) {
+      background-color: $light-brown;
+      padding: 10px;
+      border-radius: 15px;
+      &:active {
+        background-color: $dark-brown;
+      }
+    }
+  }
+  @media screen and (max-width: 800px) {
+    height: auto;
+    margin-top: 20px;
   }
 }
 
