--- a/scss/layout/_6_footer.scss
+++ b/scss/layout/_6_footer.scss
@@ -20,6 +20,9 @@ footer {
   height: auto;
   margin-left: 20px;
   margin-top: 25px;
+  @media screen and (max-width: 800px) {
+    display: none;
+  }
 }
 
 .footer-social {
@@ -44,5 +47,13 @@ footer {
   & p {
     font-size: 1.2em;
     color: $white;
+  }
+  @media screen and (max-width: 800px) {
+    float: none;
+    text-align: center;
+    width: 220px;
+    margin-right: 0px;
+    margin: 0px auto;
+    padding-top: 50px;
   }
 }
