--- a/scss/layout/_4_content-information.scss
+++ b/scss/layout/_4_content-information.scss
@@ -44,7 +44,7 @@
 
 .content__information-container__map-container__map-holder {
   height: 400px;
-  background-color: red;
+  background-color: $light-brown;
   margin: 0px auto;
 }
 // adress
