--- a/scss/layout/_6_footer.scss
+++ b/scss/layout/_6_footer.scss
@@ -35,10 +35,13 @@ footer {
     margin-right: 3px;
     color: $white;
     // hover colors for social icons
-    &:nth-child(1):hover { color: #3b5998; } // facebook
-    &:nth-child(2):hover { color: #38A1F3; } // twitter
-    &:nth-child(3):hover { color: #0077B5; } // linked in
-    &:nth-child(4):hover { color: #008000; } // tumblr
+    // different social brand colors
+    // &:nth-child(1):hover { color: #3b5998; } // facebook
+    // &:nth-child(2):hover { color: #38A1F3; } // twitter
+    // &:nth-child(3):hover { color: #0077B5; } // linked in
+    // &:nth-child(4):hover { color: #008000; } // tumblr
+    // light brown color
+    &:hover { color: $light-brown }
     // end hover colors for social icons
     &:hover {
       cursor: pointer;
