--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "layout/_4_content-menu.scss";
 @import "layout/_4_content-information.scss";
 @import "layout/_5_shoppingCart.scss";
+@import "layout/_5_shoppingCart-modal.scss";
 @import "layout/_6_footer.scss";
 
 @import "modules/_typography.scss";
