--- a/scss/layout/_5_shoppingCart-modal.scss
+++ b/scss/layout/_5_shoppingCart-modal.scss
@@ -2,35 +2,109 @@
  display: none;
  position: fixed;
  z-index: 1;
- left: 0;
+ // left: 0;
  top: 0;
+ // padding-top: 5%;
  width: 100%;
+ margin: 0px auto;
  height: 100%;
  overflow: auto;
  background-color: rgb(0,0,0);
  background-color: rgba(0,0,0,0.4);
 }
 
+.modal__title-main-container {
+  width: 100%;
+  background-color: $light-brown;
+  padding-bottom: 2px;
+}
+
+.modal__title-main-container__title {
+  color: $white;
+  font-size: 1.5em;
+  margin-left: 10px;
+  &:before {
+    content: "\f07a";
+    font-family: "Font Awesome 5 Free";
+    font-size: 0.8em;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-bottom: 15px;
+  }
+}
+
 // Modal Content/Box
 .modal__content {
  background-color: #fefefe;
  margin: 15% auto;
- padding: 20px;
+ // padding: 20px;
  border: 1px solid #888;
  width: 80%;
+
+ -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.23);
+ -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.23);
+ box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.23);
+ border-radius: 5px;
+ overflow: hidden;
+ // @include shadowBorder;
+}
+
+.modal__content__inner-content {
+
+}
+
+.modal__content__inner-content__item { // individual item
+  border-bottom: 2px solid $light-brown;
+  font-weight: 400;
+  font-size: 1.5em;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+}
+
+.modal__content__inner-content__price { // item modal price
+  background-color: $gray2;
+  color: $black;
+  font-weight: 900;
+  font-size: 1.2em;
+  padding-left: 10px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+
+.modal__content__inner-content__order-detail {
+  color: $black;
+  font-weight: 900;
+  font-size: 1.2em;
+  float: right;
+  margin-top: -25px;
+  margin-right: 5px;
 }
 
 // The Close Button
 .modal__content__close-button {
- color: #aaa;
+ color: $white;
  float: right;
- font-size: 28px;
+ font-size: 1.5em;
  font-weight: bold;
+ margin-top: -27px;
+ margin-right: 5px;
+ &:hover {
+   cursor: pointer;
+   color: $black;
+ }
 }
 
-.close:hover,
-.close:focus {
- color: black;
- text-decoration: none;
- cursor: pointer;
+.modal__content__close-button-bottom {
+  text-align: center;
+  background-color: $light-brown;
+  font-size: 1.4em;
+  font-weight: 900;
+  color: $white;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  &:hover {
+    background-color: $dark-brown;
+    cursor: pointer;
+  }
 }
