--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -3,7 +3,7 @@
   -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.23);
   box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.23);
 
-  border-radius: 5px;
+  border-radius: 3px;
 
-  border-bottom: 13px solid $gray1;
+  // border-bottom: 13px solid $gray1;
 }
