--- a/scss/layout/_1_header.scss
+++ b/scss/layout/_1_header.scss
@@ -47,17 +47,17 @@ header {
     &:hover {
       cursor: pointer;
       // padding-bottom: 7px;
-      color: $light-brown;
+      // color: $light-brown;
       // border-bottom: 4px solid $white;
       @media screen and (max-width: 800px) {
         border-bottom: none;
-        padding-bottom: 10px;
+        // padding-bottom: 10px;
       }
     }
     @media screen and (max-width: 800px) {
       background-color: $light-brown;
-      padding: 10px;
-      border-radius: 15px;
+      padding: 8px;
+      border-radius: 10px;
       &:active {
         background-color: $dark-brown;
       }
@@ -65,6 +65,7 @@ header {
   }
   @media screen and (max-width: 800px) {
     height: auto;
+    font-size: 1em;
     margin-top: 20px;
   }
 }
@@ -92,6 +93,7 @@ header {
   }
   @media screen and (max-width: 800px) {
     background-color: $light-brown;
+    color: $white;
     padding: 10px;
     border-radius: 15px;
     // width: 100px;
